# frame_transpiler

./: .gitignore  .gitignore_additions  .gitmodules  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CHANGELOG_v0.82.3.md  CHANGELOG_v0.86.0.md  CHANGELOG_v0.86.10.md  CHANGELOG_v0.86.11.md  CHANGELOG_v0.86.12.md  CHANGELOG_v0.86.13.md  CHANGELOG_v0.86.14.md  CHANGELOG_v0.86.8.md  CHANGELOG_v0.86.9.md  CLAUDE.md  CLAUDE_V4.md  Cargo.toml  DESIGN_NOTES.md  FINAL_V030_VALIDATION_REPORT.md  MEMORY_VALIDATION_REQUIREMENTS.md  PRT_TEST_RESULTS.md  README.md  STAGE4_CLEANUP_MANIFEST.md  TEST_MIGRATION_COMPLETE.md  TEST_SETUP.md  analyze_line_numbers.py  categorize_debug_importance.py  clean_enum.py  critical_nodes_summary.md  debug.txt  debug_migration.py  debug_out.txt  debug_out2.txt  debug_out3.txt  enum_test.py  err.txt  framepiler_test_env  line_number_implementation_plan.md  migrate_comments.py  (+36 more)
frame_runtime/: Cargo.toml
frame_runtime/src/: callback.rs  env.rs  environment.rs  event.rs  history.rs  info.rs  lib.rs  live.rs  machine.rs  smcat.rs  state.rs  transition.rs
frame_runtime/tests/: demo.rs  simple.rs
frame_runtime/tests/demo/: sync.rs  unsync.rs
framec/: Cargo.toml  build.rs
framec/src/: lib.rs  main.rs
framec/src/frame_c/: ast.rs  ast_serialize.rs  cli.rs  code_builder.rs  compiler.rs  config.rs  default_config.yaml  desugar.rs  fid_cache.rs  marker_linter.rs  mod.rs  module_partitioner.rs  parser.rs  parser.rs.bak  region_scanner.rs  runtime_assets.rs  scanner.rs  semantic_analyzer.rs  source_map.rs  source_mapping.rs  symbol_table.rs  target_discovery.rs  utils.rs
framec/tests/: v3_body_closers.rs  v3_compiler_demo.rs  v3_edges.rs  v3_expander.rs  v3_expander_others.rs  v3_import_scanner_c.rs  v3_import_scanner_cpp.rs  v3_import_scanner_java.rs  v3_import_scanner_rust.rs  v3_mir_all.rs  v3_module_demo.rs  v3_module_partitioner.rs  v3_multifile_demo.rs  v3_native_scanners.rs  v3_parser.rs  v3_splice_mapping.rs  v3_splice_mapping_others.rs  v3_splice_trailer.rs  v3_validator.rs
framec_tests/: .gitignore  Cargo.toml  README.md  RESTRUCTURE_SUMMARY.md  TESTING_FRAMEWORK_COMPLETE.md  TEST_INDEX.json  TEST_INDEX.md  build.rs  compare_languages.sh  config.yaml  libtest_ActionsBlockTest.rlib  libtest_DomainBlockTest.rlib  libtest_DomainTypedTest.rlib  libtest_FullSystemParamsTest.rlib  libtest_HelloWorldSystem.rlib  libtest_LampCompleteTest.rlib  libtest_MachineDocTest.rlib  libtest_MainOldReturnTest.rlib  libtest_MainParamsTest.rlib  libtest_MainReturnTest.rlib  libtest_ReturnTest.rlib  libtest_ReturnValueTest.rlib  libtest_SimpleSystemParamsTest.rlib  libtest_SystemBlocksTest.rlib  libtest_SystemParametersTest.rlib  libtest_SystemsTest.rlib  libtest_TestContinue.rlib  libtest_TestHSM.rlib  libtest_TestHSMBasic.rlib  libtest_TestMinimal.rlib  libtest_TestOneParam.rlib  libtest_TestStateVariables.rlib  libtest_TestStateVariablesDoc.rlib  libtest_TestSystemBasic.rlib  libtest_TransitionsTest.rlib  libtest_all_blocks_comprehensive.rlib  libtest_assert_v047.rlib  libtest_backtick_removal.rlib  libtest_basic.rlib  libtest_basic_transition_demo.rlib  (+159 more)
framec_tests/common/capability_modules/: async.frm  async_capabilities.frm  async_simple.frm  collections.frm  collections_simple.frm  errors.frm  errors_simple.frm  example_webcrawler.frm  filesystem.frm  filesystem_simple.frm  memory.frm  report.md  simple_test.frm  test_all_capabilities.frm  test_capability_integration.frm  test_capability_safety.frm  test_memory_pool_safety.frm  test_simple_integration.frm  test_simple_typescript.frm  test_simple_typescript.ts  test_typescript_basic.frm  test_typescript_capability_demo.frm  test_typescript_minimal.frm  test_typescript_no_interface.frm  test_typescript_system_fixed.frm  test_typescript_with_interface.frm  typescript_capability_comprehensive.frm  typescript_errors.frm  typescript_filesystem.frm  typescript_memory.frm
framec_tests/cpp/: README.md
framec_tests/cpp/Basic/: Basic.h  BasicTest.cpp  basic.frm
framec_tests/cpp/Branch/: Branch.h  BranchTest.cpp
framec_tests/cpp/Event_Handler/: Event_Handler.cpp  Event_handler_test.cpp  event_handler.frm
framec_tests/cpp/FrameLang/: FrameEvent.h  FrameLang.h
framec_tests/cpp/basic/: a.out  basic.cpp  basic.frm  basic.java  basic_test.cpp
framec_tests/cpp/branch/: branch.cpp  branch.frm  branch.java  branch_test.cpp
framec_tests/cpp/handler_calls/: handler_calls.cpp  handler_calls.frm  handler_calls_test.cpp  (+1 more)
framec_tests/docs/: test_runner_guide.md  v0.31_achievements.md
framec_tests/golang/: README.md
framec_tests/integration/: test_rust_harness.rs
framec_tests/javascript/: README.md  package-lock.json  package.json
framec_tests/llvm/: README.md
framec_tests/python/: .gitignore  README.MD
framec_tests/reports/: backtick_removal_test_results.md  test_log.md  test_matrix_v0.31.md  test_matrix_v0.57.md  test_matrix_v031.md  test_results_v0.31.json  test_results_v0.57.json  validation_report_2025-09-08.md
framec_tests/runner/: frame_test_runner.py  validate_all_tests.sh
framec_tests/scratch/: v0.11
framec_tests/src/: basic.frm  basic.rs  basic_sync.frm  basic_sync.rs  branch.frm  branch.rs  config.frm  config.rs  empty.rs  event_handler.frm  event_handler.rs  event_monitor.frm  event_monitor.rs  event_params.frm  event_params.rs  handler_calls.frm  handler_calls.rs  hierarchical.frm  hierarchical.rs  hierarchical_guard.frm  hierarchical_guard.rs  lib.rs  main.rs  match.frm  match.rs  rust_naming.frm  rust_naming.rs  rust_naming_off.frm  rust_naming_off.rs  rust_naming_on.frm  rust_naming_on.rs  simple_handler_calls.frm  simple_handler_calls.rs  state_context.frm  state_context.rs  state_context_runtime.frm  state_context_runtime.rs  state_context_runtime_sync.frm  state_context_runtime_sync.rs  state_context_stack.frm  (+13 more)
framec_tests/tests/: .rust.rs.swp  rust.rs
framec_tests/v4/: test_basic.fpy  test_codegen.rs  test_mir_integration.frm  test_mir_simple.frm  test_parse_debug.rs  test_v4.rs  traffic_light.fpy  traffic_light.py
framec_tests/visitor_generator/: VISITOR_GENERATOR_PLAN.md
(+4266 files in other folders)
