[package]
name = "frame_runtime"
version = "0.78.3"
authors = ["Mark Truluck <mark@frame-lang.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["rlib"]

[dependencies]
once_cell = "1.8.0"

[dev-dependencies]
indoc = "1.0.3"
