[package]
name = "framec"
version.workspace = true
authors = ["Mark Truluck <mark@frame-lang.org>"]
edition = "2021"

[features]
# Placeholder feature to silence cfg gating in typescript visitor until B2 is enabled
ts_b2_codegen = []

# Optional native parser adapters (off by default)
native-ts = ["swc_common", "swc_ecma_parser"]
native-rs = ["syn"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "framec"
path = "src/main.rs"

[dependencies]
chrono = "0.4"
clap = { version = "4.5" }
convert_case = "0.6"
downcast-rs = "1.2.0"
exitcode = "1.1.2"
serde = { version = "1.0", features = ["derive", "serde_derive"] }
serde_json = "1.0"
sha2 = "0.10"
wasm-bindgen = "0.2.92"
indoc = "2.0"
colored = "2.0"
petgraph = "0.6"
regex = "1.10"
toml = "0.9.5"
# Parser crates are optional and only used when corresponding features are enabled
syn = { version = "2", optional = true }
swc_common = { version = "16", features = ["tty-emitter"], optional = true }
swc_ecma_parser = { version = "26", features = ["typescript"], optional = true }
swc_ecma_ast = { version = "17", optional = true }

# Note: rustpython-parser intentionally omitted here for now; Python adapter will be added later.

[dev-dependencies]
tempfile = "3"


[package.metadata.wasm-pack.profile.release]
wasm-opt = false
