[package]
name = "framec_tests"
version = "0.20.0"
authors = ["Eric Walkingshaw <eric.wakingshaw@savant.com>", "Fernando De la Garza <fernando.delagarza@savant.com>"]
edition = "2018"

[dependencies]
frame_runtime = { path = "../frame_runtime" }
once_cell = "1.8.0"

[build-dependencies]
anyhow = "1.0"
frame_build = { path = "../frame_build" }
